# nzachapy

./: LICENSE  README.md  pyproject.toml  requirements.txt
nzachapy/: __init__.py  core.py  sementic.py
nzachapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test.py
